<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.edisongonzalez.sln_practica_1_2.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="35sp"
            android:textColor="@color/blueviolet"
            android:textStyle="bold|italic"
            android:gravity="center_horizontal|center_vertical"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/tomato"
                android:textSize="20sp"
                android:layout_marginRight="10dp"
                android:hint="@string/nombre2"
                android:textColorHint="@color/burlywood"
                android:id="@+id/ename"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellido"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/tomato"
                android:textSize="20sp"
                android:layout_marginRight="10dp"
                android:hint="@string/apellido2"
                android:textColorHint="@color/burlywood"
                android:id="@+id/elastname"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numtel"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/tomato"
                android:textSize="20sp"
                android:layout_marginRight="10dp"
                android:hint="@string/numtel2"
                android:inputType="number"
                android:textColorHint="@color/burlywood"
                android:id="@+id/etel"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contraseña"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/tomato"
                android:textSize="20sp"
                android:layout_marginRight="10dp"
                android:inputType="textWebPassword"
                android:hint="@string/password"
                android:textColorHint="@color/burlywood"
                android:id="@+id/epass1_id"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contraseña2"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/tomato"
                android:textSize="20sp"
                android:layout_marginRight="10dp"
                android:inputType="textWebPassword"
                android:hint="@string/password"
                android:textColorHint="@color/burlywood"
                android:id="@+id/epass2_id"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correoe"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/tomato"
                android:textSize="20sp"
                android:layout_marginRight="10dp"
                android:hint="@string/correoe2"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/burlywood"
                android:id="@+id/ecorreo"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/tomato"
                android:textSize="20sp"
                android:layout_marginRight="10dp"
                android:hint="@string/pick_date"
                android:textColorHint="@color/burlywood"
                android:id="@+id/eDatePicker_id"
                android:onClick="showDatePickerDialog" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ciudades"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"/>
            <Spinner
                android:id="@+id/ciudades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/rmasculino"
                android:text="@string/masc"
                android:checked="true"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/rfemenino"
                android:text="@string/fem"/>
        </RadioGroup>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/cCine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cine"/>
            <CheckBox
                android:id="@+id/cDormir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dormir"/>
            <CheckBox
                android:id="@+id/cComer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comer"/>
            <CheckBox
                android:id="@+id/cBailar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bailar"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/registrar"
                android:textAllCaps="false"
                android:background="@color/burlywood"
                android:textColor="@color/brown"
                android:textSize="20sp"
                android:id="@+id/breg"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textColor="@color/red"
            android:textSize="20sp"/>
    </LinearLayout>
</ScrollView>
